test/src/e2e_vm_tests/test_programs/should_fail/attributes_fuzz_invalid_target/src/main.sw
library;

#[fuzz]
struct InvalidStruct {
    field: u64,
}

#[fuzz_param(name = "input", iteration = 100)]
const INVALID_CONST: u64 = 42;